# anemoi-utils

./: .gitignore  CHANGELOG.md  pyproject.toml
docs/: conf.py  index.rst
docs/modules/: checkpoints.rst  dates.rst  grib.rst  humanize.rst  provenance.rst  s3.rst  settings.rst  testing.rst  text.rst
src/anemoi/utils/: __init__.py  caching.py  checkpoints.py  cli.py  compatibility.py  config.py  dates.py  devtools.py  grib.py  grids.py  hindcasts.py  humanize.py  logs.py  provenance.py  registry.py  rules.py  s3.py  sanitise.py  sanitize.py  settings.py  text.py  timer.py
src/anemoi/utils/commands/: config.py  metadata.py  requests.py  transfer.py
src/anemoi/utils/mars/: __init__.py  requests.py
src/anemoi/utils/mlflow/: auth.py  client.py  utils.py
src/anemoi/utils/remote/: __init__.py  az.py  s3.py  ssh.py
src/anemoi/utils/schemas/: __init__.py  errors.py
src/anemoi/utils/settings_schema/: base.py  datasets.py  object_storage.py  paramdb.py  registry.py  settings.defaults.toml  utils.py
tests/: conftest.py  test_az.py  test_caching.py  test_checkpoints.py  test_compatibility.py  test_dates.py  test_dotdict.py  test_frequency.py  test_grib.py  test_humanize.py  test_mlflow_auth.py  test_mlflow_client.py  test_provenance.py  test_registry.py  test_remote.py  test_s3.py  test_sanitise.py  test_settings.py  test_utils.py  test_window.py
tests/dummy_registry/: __init__.py  factory.py
tests/helpers/: azurite.py
