# (C) Copyright 2025 Anemoi contributors.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
#
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.
[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=60", "setuptools-scm>=8" ]

[project]
name = "anemoi-utils"
description = "A package to hold various functions to support training of ML models on ECMWF data."
readme = "README.md"
keywords = [ "ai", "tools" ]
license = { file = "LICENSE" }
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]
requires-python = ">=3.11,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = [ "version" ]
dependencies = [
  "aniso8601",
  "deprecation",
  "entrypoints",
  "filelock",
  "multiurl",
  "numpy",
  "pydantic>=2.9",
  "pydantic-settings>=2.14.1",
  "python-dateutil",
  "pyyaml",
  "rich",
  "tqdm",
]
optional-dependencies.all = [ "anemoi-utils[grib,mlflow,provenance,remote,text]" ]
optional-dependencies.dev = [ "anemoi-utils[all,docs,tests]" ]
optional-dependencies.docs = [
  "anemoi-utils[all]",
  "autodoc-pydantic>=2.2",
  "nbsphinx",
  "pandoc",
  "requests",
  "sphinx",
  "sphinx-argparse",
  "sphinx-rtd-theme",
  "termcolor",
]
optional-dependencies.grib = [ "requests" ]
optional-dependencies.mlflow = [ "mlflow-skinny>=2.11.1", "requests" ]
optional-dependencies.provenance = [ "gitpython", "nvsmi" ]
optional-dependencies.remote = [ "obstore" ]
optional-dependencies.s3 = [ "anemoi-utils[remote]" ]  # deprecated, use "remote"
optional-dependencies.tests = [ "anemoi-utils[mlflow,provenance]", "pytest", "pytest-mock>=3" ]
optional-dependencies.text = [ "termcolor", "wcwidth" ]
urls.Documentation = "https://anemoi-utils.readthedocs.io/"
urls.Homepage = "https://github.com/ecmwf/anemoi-utils/"
urls.Issues = "https://github.com/ecmwf/anemoi-utils/issues"
urls.Repository = "https://github.com/ecmwf/anemoi-utils/"
scripts.anemoi-utils = "anemoi.utils.__main__:main"

[tool.setuptools]
package-data."anemoi.utils.mars" = [ "*.yaml" ]
package-data."anemoi.utils.settings_schema" = [ "*.toml" ]

[tool.setuptools_scm]
version_file = "src/anemoi/utils/_version.py"

[tool.ruff]
line-length = 120
extend-exclude = ["docs/**/*_.py"]

[tool.mypy]
mypy_path = "src"
exclude = [
  "docs/.*",
]
explicit_package_bases = true
strict = false

[tool.pytest]
ini_options.markers = [
  "skip_on_hpc: mark a test that should not be run on HPC",
]

[tool.pydocstringformatter]
write = true
exclude = "docs/**"
style = "numpydoc"
